# piratebot

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  config.yaml  main.py  pyproject.toml  quickstart_mac.sh  requirements-mac.txt  requirements.txt
data/: voice_lines.yaml
docs/: moss-tts-windows-quickstart.md
godot_project/: project.godot
godot_project/assets/audio/: .gitkeep
godot_project/scenes/: pirate.tscn
godot_project/scripts/: pirate_controller.gd  websocket_server.gd
interfaces/: __init__.py  avatar_controller.py  detector.py  language_model.py  tts_engine.py  vision_model.py
prompts/: pirate_persona.txt
services/: __init__.py  godot_avatar.py  interaction_state.py  kokoro_tts.py  moondream_vlm.py  ollama_llm.py  parrotts_tts.py  voice_line_db.py  voice_line_search.py  voice_line_tts.py  yolo_detector.py
services/parrotts_vendor/: __init__.py  _status.py  client.py
tests/: test_interaction_state.py
tools/: __init__.py  expand_voice_lines.py  generate_voice_lines.py  generate_voice_lines_mac.py  generate_voice_lines_moss.py  migrate_to_parrotts.py
