[project]
name = "piratebot"
version = "0.1.0"
description = "Interactive Halloween pirate decoration with AI-powered costume recognition and voice responses"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PirateBot Team" }]

# Core dependencies (minimal for voice line tools)
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# Mac/Apple Silicon - TTS with Qwen3 voice cloning (primary platform)
mac = [
    "mlx-audio[tts]>=0.3.0rc1",  # Qwen3-TTS with voice cloning
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "soundfile>=0.12.0",
    "pyttsx3>=2.90",  # Fallback TTS
]

# Full PirateBot runtime on Mac (detection, VLM, avatar, TTS)
full = [
    # TTS (same as mac)
    "mlx-audio[tts]>=0.3.0rc1",
    "soundfile>=0.12.0",
    "pyttsx3>=2.90",
    # Voice line database
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    # Detection & Vision (uses MLX/CoreML on Mac)
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    # Avatar communication
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
# Entry points for voice line tools
piratebot-generate = "tools.generate_voice_lines_mac:main"
piratebot-expand = "tools.expand_voice_lines:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "tools", "interfaces"]

[tool.uv]
# uv-specific settings
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
